--- a/packages/theme-default/index.scss
+++ b/packages/theme-default/index.scss
@@ -1,6 +1,8 @@
 @import 'Button.scss';
 @import 'CheckBox.scss';
 @import 'Switch.scss';
+@import 'MessageBox.scss';
+@import 'Tree.scss';
 
 .top-m-10 {
   margin-top: 10px;
